--- a/index.html
+++ b/index.html
@@ -27,9 +27,21 @@
             <div class="profile">
 
                 <img src="images/profile1.svg" alt="profile">
-
+                <h1 class="profile-title">Matheus Enrico</h1>
+                <h3 class="profile-description">Developer  Java - JavaScript - HTML/CSS  </h3>
             </div>
+        </section>
 
+        <section class="portfolio">
+            <h1 class="portfolio-title">Portfolio</h1>
+            <div class="portfolio-container">
+                <img src="images/portfolio1.png" alt="">
+                <img src="images/portfolio2.png" alt="">
+                <img src="images/portfolio3.png" alt="">
+                <img src="images/portfolio4.png" alt="">
+                <img src="images/portfolio5.png" alt="">
+                <img src="images/portfolio6.png" alt="">
+            </div>
         </section>
     </header>
 </body>
